repairing layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,13 @@ body {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   width: 100%;
   font-family: 'Noto-Sans', sans-serif;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  align-items: center;
 }
 
