--- a/src/components/BlogCard/BlogCard.module.css
+++ b/src/components/BlogCard/BlogCard.module.css
@@ -17,6 +17,7 @@
 }
 
 .content {
+    height: 216px;
     padding: 24px 16px; 
 }
 
